# wikimedia-developer-portal

./: .dockerignore  .flake8  .gitignore  .gitreview  Makefile  README.md  docker-compose.yaml  mkdocs.yml  pyproject.toml
.pipeline/: blubber.yaml  config.yaml  dev-python.Dockerfile  local.Dockerfile
contrib/nginx/: local.conf  nginx.conf  production.conf
data/categories/: access-data.yaml  accessibility.yaml  api-catalog-experimental.yaml  api-catalog-stable.yaml  api-reading.yaml  apis-tools.yaml  app-galleries.yaml  automate-editing.yaml  best-practices-tools.yaml  bot-traffic.yaml  cloud.yaml  code-maintainers.yaml  code-search.yaml  communicate.yaml  content-overviews.yaml  contribute-by-topic.yaml  contribute-go.yaml  contribute-java.yaml  contribute-javascript.yaml  contribute-kotlin.yaml  contribute-php.yaml  contribute-python.yaml  contribute-ruby.yaml  contribute-rust.yaml  contribute-swift.yaml  documentation.yaml  events.yaml  get-started-tools.yaml  grants.yaml  grow.yaml  help.yaml  localization.yaml  mediawiki-action.yaml  mediawiki-customize.yaml  mediawiki-extension-advanced.yaml  mediawiki-extension-basic.yaml  mediawiki-rest.yaml  new-contributor.yaml  new-dev.yaml  outreach.yaml  (+19 more)
data/documents/: accessibility.yaml  android.yaml  api-policy.yaml  app-gallery.yaml  blubber.yaml  bot-contacts.yaml  bots.yaml  client-libraries.yaml  cloud.yaml  code-maintainers.yaml  code-of-conduct.yaml  code-review.yaml  code-search.yaml  codex.yaml  commons-android.yaml  communication-channels.yaml  coolest-tool.yaml  data-dumps.yaml  data-replicas.yaml  data.yaml  developer-account.yaml  development-guidelines.yaml  differences.yaml  doc-wikimedia.yaml  documentation-contribute.yaml  documentation.yaml  enterprise.yaml  event-streams-api.yaml  explore-projects.yaml  extension-create.yaml  extensions-browse.yaml  featured-content-api.yaml  gadgets.yaml  git-gerrit.yaml  global-search.yaml  google-summer-of-code.yaml  grants.yaml  hackathons.yaml  holidays-viewer.yaml  image-suggestion-api.yaml  (+88 more)
data/includes/: category.jinja  document.jinja  markdown_base.jinja
data/locale/ar/LC_MESSAGES/: mkdocs.po
data/locale/bn/LC_MESSAGES/: mkdocs.po
data/locale/de/LC_MESSAGES/: mkdocs.po
data/locale/en-gb/LC_MESSAGES/: mkdocs.po
data/locale/en/LC_MESSAGES/: mkdocs.po
data/locale/es/LC_MESSAGES/: mkdocs.po
data/locale/fi/LC_MESSAGES/: mkdocs.po
data/locale/fr/LC_MESSAGES/: mkdocs.po
data/locale/ga/LC_MESSAGES/: mkdocs.po
data/locale/he/LC_MESSAGES/: mkdocs.po
data/locale/ja/LC_MESSAGES/: mkdocs.po
data/locale/ko/LC_MESSAGES/: mkdocs.po
data/locale/lb/LC_MESSAGES/: mkdocs.po
data/locale/mk/LC_MESSAGES/: mkdocs.po
data/locale/nl/LC_MESSAGES/: mkdocs.po
data/locale/pl/LC_MESSAGES/: mkdocs.po
data/locale/pt-br/LC_MESSAGES/: mkdocs.po
data/locale/qqq/LC_MESSAGES/: mkdocs.po
data/locale/ru/LC_MESSAGES/: mkdocs.po
data/locale/sh-latn/LC_MESSAGES/: mkdocs.po
data/locale/sh/LC_MESSAGES/: mkdocs.po
data/locale/sk/LC_MESSAGES/: mkdocs.po
data/locale/sl/LC_MESSAGES/: mkdocs.po
data/locale/tr/LC_MESSAGES/: mkdocs.po
data/locale/zh-hans/LC_MESSAGES/: mkdocs.po
data/locale/zh-hant/LC_MESSAGES/: mkdocs.po
data/theme/: main.html
data/theme/partials/: copyright.html  logo.html
docs/: index.md
macros/: __init__.py
plugin/: mdpo_events.py  plugin.py  util.py
src/: index.md
src/about/: index.md
src/api/: index.md  reading.md
src/assets/js/: matomo.js
src/assets/stylesheets/: theme.css
src/build-tools/: apis.md  automate-editing.md  best-practices.md  customize-mediawiki.md  discover.md  extend-mw-basic.md  get-started.md  host-tools.md  index.md  search.md  setup.md  tutorials.md
src/community/: communicate.md  events.md  grow.md  index.md  tech-ops.md
src/connect/: code-maintainers.md  communicate.md  events.md  grants.md  index.md  updates.md  wmf-technical-operations.md
src/connect-learn/: communicate.md  events.md  grow.md  index.md  updates.md
src/contribute/: accessibility.md  by-language.md  by-topic.md  documentation.md  index.md  localization.md  mediawiki.md  overview.md  search.md
src/get-help/: about.md  index.md
src/get-started/: browse-languages.md  index.md  new-dev.md  tutorials.md  wikimedia-tech.md
src/grow/: events.md  index.md  outreach.md  tech-capacity.md
src/quick-links/: api-catalog.md  browse-by-api.md  index.md
src/use-content/: apis.md  bot-traffic.md  content.md  data.md  featured-apps.md  index.md  overview.md  tutorials.md
(+6 files in other folders)
