[tool.poetry]
name = "wikimedia-developer-portal"
version = "0.1.0"
description = ""
authors = [
  "Bryan Davis <bd808@wikimedia.org>",
  "Alex Paskulin <apaskulin@wikimedia.org>",
  "Tricia Burmeister <tburmeister@wikimedia.org>"
]
license = "GPL-3.0-or-later"
readme = "README.md"
include = [
  "README.md",
  "pyproject.toml",
  "COPYING"
]
packages = [
  { include = "plugin" },
]

[tool.poetry.plugins]
[tool.poetry.plugins."mkdocs.plugins"]
jinja_wrapper = "plugin.plugin:JinjaWrapperPlugin"
translate = "plugin.plugin:TranslatePlugin"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.38"
mkdocs-macros-plugin = "^1.0.4"
mdpo = "^2.0.1"
langcodes = {extras = ["data"], version = "^3.4.1"}
importlib-metadata = "^8.5.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
flake8-blind-except = "^0.2.1"
flake8-bugbear = "^22.12.6"
flake8-builtins = "^2.0.1"
flake8-comprehensions = "^3.10.1"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.2"
flake8-logging-format = "^0.9.0"

[tool.isort]
known_first_party = ["macros", "plugin"]
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true

[tool.black]
line-length = 79
target_version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | _build
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
